Feat: Se agrega nav y banner

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formula E</title>
     <link rel="stylesheet" href="src/style/style.css">
 </head>
+<header>
+<h1>Formula E. Acelera.</h1>
+<nav>
+    <a href="#inicio">INICIO</a>
+    <a href="#noticias">NOTICIAS</a>
+    <a href="#siguenos">SÍGUENOS</a>
+    <a href="#contacto">CONTACTO</a><br>
+    <img src="src/images/banner.webp" alt="banner" width="700px" height="300px">
+</nav>
+</header>
 <body>
     
 </body>
