Feat: Se añaden tarjetas

--- a/index.html
+++ b/index.html
@@ -6,17 +6,34 @@
     <title>Formula E</title>
     <link rel="stylesheet" href="src/style/style.css">
 </head>
-<header>
-<h1>Formula E. Acelera.</h1>
-<nav>
-    <a href="#inicio">INICIO</a>
-    <a href="#noticias">NOTICIAS</a>
-    <a href="#siguenos">SÍGUENOS</a>
-    <a href="#contacto">CONTACTO</a><br>
-    <img src="src/images/banner.webp" alt="banner" width="700px" height="300px">
-</nav>
-</header>
 <body>
-    
+    <nav>
+        <a href="#inicio">INICIO</a>
+        <a href="#noticias">NOTICIAS</a>
+        <a href="#siguenos">SÍGUENOS</a>
+        <a href="#contacto">CONTACTO</a><br>
+        
+    </nav>
+    <header>
+        <h1>Formula E. Acelera.</h1>
+        <img src="src/images/banner.webp" alt="banner" width="700px" height="300px">
+    </header>
+    <main id="#inicio">
+        <h2>Top 3 del campeonato 2025:</h2>
+        <div id="tarjetas">
+            <div id="nick">
+                <img src="src/images/Nick_Cassidy.webp" alt="Nick Cassidy">
+                <h3>2. Nick Cassidy</h3>
+            </div>
+            <div id="oliver">
+                <img src="src/images/oliver.png" alt="Oliver Rowland">
+                <h3>1. Oliver Rowland</h3>
+            </div>
+            <div id="pascal">
+                <img src="src/images/pascal.png" alt="Pascal Wehrlein">
+                <h3>3. Pascal Wehrlein</h3>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
