Feat: Se agrega estilo a las tarjetas

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <main id="#inicio">
         <h2>Top 3 del campeonato 2025:</h2>
         <div id="tarjetas">
-            <div id="nick">
+            <div id="nick" class="tarjeta">
                 <img src="src/images/Nick_Cassidy.webp" alt="Nick Cassidy">
                 <h3>2. Nick Cassidy</h3>
             </div>
-            <div id="oliver">
+            <div id="oliver" class="tarjeta">
                 <img src="src/images/oliver.png" alt="Oliver Rowland">
                 <h3>1. Oliver Rowland</h3>
             </div>
-            <div id="pascal">
+            <div id="pascal" class="tarjeta">
                 <img src="src/images/pascal.png" alt="Pascal Wehrlein">
                 <h3>3. Pascal Wehrlein</h3>
             </div>
