Feat: Se agregan estilos al nav y header

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </nav>
     <header>
         <h1>Formula E. Acelera.</h1>
-        <img src="src/images/banner.webp" alt="banner" width="700px" height="300px">
+        <img src="src/images/banner.webp" alt="banner" width="800px" height="300px">
     </header>
     <main id="#inicio">
-        <h2>Top 3 del campeonato 2025:</h2>
+        <h2>Resultado del campeonato 2025:</h2>
         <div id="tarjetas">
             <div id="nick" class="tarjeta">
                 <img src="src/images/Nick_Cassidy.webp" alt="Nick Cassidy">
