Feat: Se agrega seccion Noticias, Siguenos, Contacto y se agrega Footer

--- a/index.html
+++ b/index.html
@@ -35,5 +35,17 @@
             </div>
         </div>
     </main>
+    <div id="noticias">
+        <h2>Noticias</h2>
+    </div>
+    <div id="siguenos">
+        <h2>Siguenos</h2>
+    </div>
+    <div id="contacto">
+        <h2>Contactanos</h2>
+    </div>
+    <footer>
+        © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
+    </footer>
 </body>
 </html>
