Feat: Se cambia fuente y paleta de colores, se agrega tabla a seccion Noticias

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula E</title>
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -19,30 +23,75 @@
         <img src="src/images/banner.webp" alt="banner" width="800px" height="300px">
     </header>
     <main id="#inicio">
-        <h2>Resultado del campeonato 2025:</h2>
+        <h2>INICIO</h2>
+        <h3>Resultado del campeonato 2025:</h3>
         <div id="tarjetas">
             <div id="nick" class="tarjeta">
                 <img src="src/images/Nick_Cassidy.webp" alt="Nick Cassidy">
-                <h3>2. Nick Cassidy</h3>
+                <p>2. Nick Cassidy<p>
             </div>
             <div id="oliver" class="tarjeta">
                 <img src="src/images/oliver.png" alt="Oliver Rowland">
-                <h3>1. Oliver Rowland</h3>
+                <p>1. Oliver Rowland<p>
             </div>
             <div id="pascal" class="tarjeta">
                 <img src="src/images/pascal.png" alt="Pascal Wehrlein">
-                <h3>3. Pascal Wehrlein</h3>
+                <p>3. Pascal Wehrlein<p>
             </div>
         </div>
     </main>
     <div id="noticias">
-        <h2>Noticias</h2>
+        <h2>NOTICIAS</h2>
+        <h3>FINALIZA LA TEMPORADA 2025</h3>
+        <p>Aquí puedes ver los resultados en el campeonato de equipos:</p>
+        <table id="campeonato">
+            <tr>
+                <th>Posicion</th>
+                <th>Equipo</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Yo</td>
+            </tr>
+        </table>
     </div>
     <div id="siguenos">
-        <h2>Siguenos</h2>
+        <h2>SIGUENOS</h2>
     </div>
     <div id="contacto">
-        <h2>Contactanos</h2>
+        <h2>CONTACTANOS</h2>
     </div>
     <footer>
         © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
