Feat: Se actualiza tabla con informacion y se añaden estilos

--- a/index.html
+++ b/index.html
@@ -51,39 +51,43 @@
             </tr>
             <tr>
                 <td>1</td>
-                <td>Yo</td>
+                <td>ANDRETTI</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>2</td>
+                <td>PORSCHE</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>3</td>
+                <td>NISSAN</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>4</td>
+                <td>CITROEN</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>5</td>
+                <td>ENVISION</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>6</td>
+                <td>DS PENSKE</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>7</td>
+                <td>MAHINDRA</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>8</td>
+                <td>YAMAHA ABT</td>
             </tr>
             <tr>
-                <td>1</td>
-                <td>Yo</td>
+                <td>9</td>
+                <td>JAGUAR TCS</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>CUPRA KIRO</td>
             </tr>
         </table>
     </div>
