Feat: Se agrega noticia con propiedades Display: Flex, se cambia paleta de colores

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </main>
-    <div id="noticias">
+    <section id="noticias">
         <h2>NOTICIAS</h2>
         <h3>FINALIZA LA TEMPORADA 2025</h3>
         <p>Aquí puedes ver los resultados en el campeonato de equipos:</p>
@@ -90,13 +90,23 @@
                 <td>CUPRA KIRO</td>
             </tr>
         </table>
-    </div>
-    <div id="siguenos">
+        <h3>SE PRESENTA LA 4TA GENERACION DE AUTOS</h3>
+        <p>La formula E nos ha dado un vistazo de la nueva generacion de autos de carreras electricos de última generación
+            a los cuales se les ha dado el nombre de Cuarta Generación, y tendrán un diseño parecido al mostrado a continuación:
+        </p>
+        <div id="autos">
+            <img src="src/images/auto1.webp" alt="Auto 4ta generacion">
+            <img src="src/images/auto2.jpeg" alt="Segundo auto 4ta generacion">
+            <img src="src/images/auto3.webp" alt="Tercer auto 4ta generacion">
+            <img src="src/images/auto4.jpeg" alt="Cuarto auto 4ta generacion">
+        </div>
+    </section>
+    <section id="siguenos">
         <h2>SIGUENOS</h2>
-    </div>
-    <div id="contacto">
+    </section>
+    <section id="contacto">
         <h2>CONTACTANOS</h2>
-    </div>
+    </section>
     <footer>
         © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
     </footer>
