Feat: Se agregan propiedades flex-wrap para centrar correctamente, se agrega seccion Siguenos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <header>
         <h1>Formula E. Acelera.</h1>
-        <img src="src/images/banner.webp" alt="banner" width="800px" height="300px">
+        <img src="src/images/banner.webp" alt="banner">
     </header>
     <main id="#inicio">
         <h2>INICIO</h2>
@@ -99,10 +99,17 @@
             <img src="src/images/auto2.jpeg" alt="Segundo auto 4ta generacion">
             <img src="src/images/auto3.webp" alt="Tercer auto 4ta generacion">
             <img src="src/images/auto4.jpeg" alt="Cuarto auto 4ta generacion">
+            <img src="src/images/auto5.jpg" alt="Quinto auto 4ta generacion">
+            <img src="src/images/auto6.jpg" alt="Sexto auto 4ta generacion">
+            <img src="src/images/auto7.jpg" alt="Septimo auto 4ta generacion">
         </div>
     </section>
     <section id="siguenos">
         <h2>SIGUENOS</h2>
+        <ul>
+            <li><p>INSTAGRAM: <a href="https://www.instagram.com/fiaformulae/">@fiaformulae</a></p></li>
+            <li><p>FACEBOOK: <a href="https://www.facebook.com/fiaformulae/?locale=es_LA">ABB Formula E</a></p></li>
+        </ul>
     </section>
     <section id="contacto">
         <h2>CONTACTANOS</h2>
