Feat: Se cambia banner

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
         
     </nav>
     <header>
-        <h1>Formula E. Acelera.</h1>
-        <img src="src/images/banner.webp" alt="banner">
+        <img src="src/images/logo2.png" alt="Logo">
     </header>
     <main id="#inicio">
-        <h2>INICIO</h2>
+        <h2><h1>Formula E. Acelera.</h1></h2>
         <h3>Resultado del campeonato 2025:</h3>
         <div id="tarjetas">
             <div id="nick" class="tarjeta">
