--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -15,8 +15,7 @@
         <a href="#inicio">INICIO</a>
         <a href="#noticias">NOTICIAS</a>
         <a href="#siguenos">SÍGUENOS</a>
-        <a href="#contacto">CONTACTO</a><br>
-        
+        <a href="#contacto">CONTACTO</a>
     </nav>
     <header>
         <img src="src/images/logo2.png" alt="Logo">
@@ -113,6 +112,10 @@
     <section id="contacto">
         <h2>CONTACTANOS</h2>
     </section>
+    <div id="cookies">
+        <p>Este sitio utiliza cookies para mejorar la experiencia. <a href="#politicas">Más información</a></p>
+        <button class="aceptar-cookies">ACEPTAR</button>
+    </div>
     <footer>
         © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
     </footer>
