--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portafolio web moderno con HTML, CSS, navbar, footer, uso de flexbox">
     <title>Formula E</title>
     <link rel="stylesheet" href="src/style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="src/images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     <nav>
-        <a href="#inicio">INICIO</a>
-        <a href="#noticias">NOTICIAS</a>
-        <a href="#siguenos">SÍGUENOS</a>
-        <a href="#contacto">CONTACTO</a>
+        <a href="#inicio">
+            <img src="src/images/logo3.png" alt="Logo formula E">
+        </a>
+        <a href="#inicio" class="elemento-nav">INICIO</a>
+        <a href="#noticias" class="elemento-nav">NOTICIAS</a>
+        <a href="#siguenos" class="elemento-nav">SÍGUENOS</a>
+        <a href="#contacto" class="elemento-nav">CONTACTO</a>
+        <a href="#login" class="elemento-nav">LOGIN</a>
     </nav>
-    <header>
+    <header id="inicio">
         <img src="src/images/logo2.png" alt="Logo">
     </header>
-    <main id="#inicio">
+    <main>
+        <br><br>
+        <a href="#hablemos" id="hablemos"><img src="src/images/hablemos2.png" alt="Chat"></a>
         <h2><h1>Formula E. Acelera.</h1></h2>
         <h3>Resultado del campeonato 2025:</h3>
         <div id="tarjetas">
@@ -41,7 +48,7 @@
     <section id="noticias">
         <h2>NOTICIAS</h2>
         <h3>FINALIZA LA TEMPORADA 2025</h3>
-        <p>Aquí puedes ver los resultados en el campeonato de equipos:</p>
+        <p>La emocionante temporada 2025 ha finalizado, aquí puedes ver los resultados en el campeonato de equipos:</p>
         <table id="campeonato">
             <tr>
                 <th>Posicion</th>
@@ -112,12 +119,13 @@
     <section id="contacto">
         <h2>CONTACTANOS</h2>
     </section>
-    <div id="cookies">
-        <p>Este sitio utiliza cookies para mejorar la experiencia. <a href="#politicas">Más información</a></p>
-        <button class="aceptar-cookies">ACEPTAR</button>
-    </div>
     <footer>
         © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
+        <br><br><br><br><br>
     </footer>
+    <div id="cookies">
+        <p>Este sitio utiliza cookies para mejorar la experiencia. <a href="#politicas">Más información</a></p>
+        <button>ACEPTAR</button>
+    </div>
 </body>
 </html>
