Feat: Se arregla z-index del nav, se agrega footer con información

--- a/index.html
+++ b/index.html
@@ -120,7 +120,34 @@
         <h2>CONTACTANOS</h2>
     </section>
     <footer>
-        © AlessanDev. 2025 casi 2026. Todos los derechos reservados.
+        <section class="footer-cols">
+            <div>
+                <h3>ABB Formula E</h3>
+                <p>La casa oficial del Campeonato Mundial de la FIA ABB Formula E.</p>
+            </div>
+            <div>
+                <h4>Links</h4>
+                <ul>
+                    <li><a href="#patrocinadores">Patrocinadores</a></li>
+                    <li><a href="#voluntarios">Voluntarios</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Legal</h4>
+                <ul>
+                    <li><a href="#terminos">Términos y condiciones</a></li>
+                    <li><a href="#privacidad">Política de privacidad</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4>Sígueme</h4>
+                <ul>
+                    <li><a href="https://www.linkedin.com/in/aar%C3%B3n-alessandro-medina-ayala-1b2b33332/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/alessmedins" target="_blank">GitHub</a></li>
+                </ul>
+            </div>
+        </section>
+        <small>© AlessanDev. 2025 casi 2026. Todos los derechos reservados.</small>
         <br><br><br><br><br>
     </footer>
     <div id="cookies">
