Feat: Se agregan "otras noticias", se agrega seccion "carreras"

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </a>
         <a href="#inicio" class="elemento-nav">INICIO</a>
         <a href="#noticias" class="elemento-nav">NOTICIAS</a>
+        <a href="#carreras" class="elemento-nav">CARRERAS</a>
         <a href="#siguenos" class="elemento-nav">SÍGUENOS</a>
-        <a href="#contacto" class="elemento-nav">CONTACTO</a>
         <a href="#login" class="elemento-nav">LOGIN</a>
     </nav>
     <header id="inicio">
@@ -28,7 +28,8 @@
     <main>
         <br><br>
         <a href="#hablemos" id="hablemos"><img src="src/images/hablemos2.png" alt="Chat"></a>
-        <h2><h1>Formula E. Acelera.</h1></h2>
+        <h1>FIA ABB FORMULA E WORLD CHAMPIONSHIP®</h1>
+        <h2>INICIO</h2>
         <h3>Resultado del campeonato 2025:</h3>
         <div id="tarjetas">
             <div id="nick" class="tarjeta">
@@ -46,7 +47,7 @@
         </div>
     </main>
     <section id="noticias">
-        <h2>NOTICIAS</h2>
+        <h2>NOTICIAS DESTACADAS</h2>
         <h3>FINALIZA LA TEMPORADA 2025</h3>
         <p>La emocionante temporada 2025 ha finalizado, aquí puedes ver los resultados en el campeonato de equipos:</p>
         <table id="campeonato">
@@ -109,6 +110,37 @@
             <img src="src/images/auto7.jpg" alt="Septimo auto 4ta generacion">
         </div>
     </section>
+    
+    <section id="otras-noticias">
+        <h2>OTRAS NOTICIAS</h2>
+        <div class="otra-noticia">
+            <img src="src/images/driver.jpg" alt="Portada de serie Driver">
+            <div id="info-noticia">
+                <h3>MIRA LA TEMPORADA 2 EN AMAZON PRIME VIDEO</h3><br>
+                <a href="https://www.primevideo.com/detail/0R9IY825CHAOVBNGLCM8D02GVU/ref=atv_dp_season_select_s2" class="titulo-noticia" target="_blank">FORMULA E: DRIVER</a>
+                <p>Cinco pilotos de élite abren sus vidas a las cámaras, dentro y fuera de la pista, mientras compiten en la temporada 11 de la Fórmula E. Cada uno ha recorrido un camino diferente hacia la cima, pero comparten el mismo sueño: ser Campeón del Mundo.
+                <br>Solo uno lo logrará. Sumérgete tras las cámaras de Oliver Rowland, Pascal Wehrlein, Antonio Félix da Costa, Dan Ticktum y Taylor Barnard.
+                <br><br>Todos los episodios de la serie Fórmula E: Driver ya están disponibles en Amazon Prime Video.</p>
+                <a href="https://www.primevideo.com/detail/0R9IY825CHAOVBNGLCM8D02GVU/ref=atv_dp_season_select_s2" class="boton-ver" target="_blank">MIRA AHORA</a>
+            </div>
+        </div>
+        <div class="otra-noticia">
+            
+            <div id="info-noticia">
+                <h3>DESCUBRE</h3><br>
+                <a href="https://fiaformulae.com/en/stats-centre" class="titulo-noticia" target="_blank">CENTRO DE DATOS</a>
+                <p>Descubre las estadísticas clave de la Fórmula E. Consulta qué pilotos ganaron, dónde y con qué frecuencia, o profundiza en su rendimiento esta temporada.
+                <br><br>Con la tecnología de Infosys, el nuevo Centro de Estadísticas utiliza IA para ofrecerte toda la información necesaria para seguir la competición.</p>
+                <a href="https://fiaformulae.com/en/stats-centre" class="boton-ver" target="_blank">MIRA AHORA</a>
+            </div>
+            <img src="src/images/centro.webp" alt="Centro de datos">
+        </div>
+    </section>
+    <section id="carreras">
+        <h2>CARRERAS</h2>
+        <h3>TEMPORADA 12, 2025-2026, LA 4TA GENERACIÓN LLEGÓ Y TE PRESENTAMOS EL CALENDARIO ACTUALIZADO:</h3>
+        <img src="src/images/calendario.jpg" alt="">
+    </section>
     <section id="siguenos">
         <h2>SIGUENOS</h2>
         <ul>
@@ -116,14 +148,12 @@
             <li><p>FACEBOOK: <a href="https://www.facebook.com/fiaformulae/?locale=es_LA">ABB Formula E</a></p></li>
         </ul>
     </section>
-    <section id="contacto">
-        <h2>CONTACTANOS</h2>
-    </section>
     <footer>
         <section class="footer-cols">
             <div>
                 <h3>ABB Formula E</h3>
                 <p>La casa oficial del Campeonato Mundial de la FIA ABB Formula E.</p>
+                <small>© AlessanDev. 2025 casi 2026. Todos los derechos reservados.</small>
             </div>
             <div>
                 <h4>Links</h4>
@@ -147,7 +177,6 @@
                 </ul>
             </div>
         </section>
-        <small>© AlessanDev. 2025 casi 2026. Todos los derechos reservados.</small>
         <br><br><br><br><br>
     </footer>
     <div id="cookies">
